# Wearable_device

./: .gitignore  README.md  decision.md  demo.py  main.c  project_plan.md
common/espnow_comm/: CMakeLists.txt  espnow_comm.c
common/espnow_comm/include/: espnow_comm.h
common/protocol/: protocol.c
common/protocol/include/: protocol.h
dashboard/: gui.py  main.py  requirements.txt  serial_reader.py
dashboard/logs/: ecg_20260506_073817.csv  ecg_20260506_074349.csv  ecg_20260506_074356.csv  ecg_20260506_105608.csv  vitals_20260506_073817.csv  vitals_20260506_074349.csv  vitals_20260506_074356.csv  vitals_20260506_105608.csv
master_node/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
master_node/main/: CMakeLists.txt  master_main.c
sender_node/: CMakeLists.txt  preprocessed.c  sdkconfig  sdkconfig.defaults
sender_node/components/ad8232/: CMakeLists.txt  ad8232.c
sender_node/components/ad8232/include/: ad8232.h
sender_node/components/buzzer/: CMakeLists.txt  buzzer.c
sender_node/components/buzzer/include/: buzzer.h
sender_node/components/ds18b20/: CMakeLists.txt  ds18b20.c
sender_node/components/ds18b20/include/: ds18b20.h
sender_node/components/max30102/: CMakeLists.txt  README.md  max30102.c  max30102.md
sender_node/components/max30102/include/: max30102.h  max30102_reg.h
sender_node/components/max30205/: CMakeLists.txt  max30205.c
sender_node/components/mq135/: CMakeLists.txt  mq135.c
sender_node/components/tmp117/: CMakeLists.txt  tmp117.c
sender_node/hal/: i2c.c  i2c.h
sender_node/main/: CMakeLists.txt  sender_main.c  test_main.c
(+4 files in other folders)
